footer padding on mobile fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,11 @@ body {
     .contact-links-wrapper .mr-3 {
         margin-bottom: 8px;
     }
+
+    .footer .jumbotron {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
 }
 
 
